# Parallel-nbody

./: README.md
CUDA/: cpu.cpp  gpu.cu  gpu_naive.cu  gpu_sort.cu  job_runtimes  job_weak
OpenMP/: CMakeLists.txt  common.h  common_set.h  job-open-bs  job-openmp  job-strong  openmp.cpp  openmp_set.cpp  serial.cpp  serial_run.txt
OpenMP/results/: bssweep-parallel.txt  omp.csv  serial.csv  strong.csv  weak.csv
OpenMPI/: CMakeCache.txt  Makefile  cmake_install.cmake  mpi  mpi.cpp
